<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/sumText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_number"
        android:gravity="center"
        />

    <EditText
        android:id="@+id/displayText"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType = "numberSigned" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addition_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addition" />

        <Button
            android:id="@+id/subtraction_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtraction" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/multiplication_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiplication" />

        <Button
            android:id="@+id/division_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/division" />
    </LinearLayout>

</LinearLayout>
