<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".CalculatorFragment"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/view_history_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_history_title" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/sumText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_number"
            android:textColor="@color/white"
            android:gravity="center"
            />

        <EditText
            android:id="@+id/editText"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:inputType = "numberDecimal"
            android:text="--"
            />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/addition_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addition"
                />

            <Button
                android:id="@+id/subtraction_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtraction" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/multiplication_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/multiplication" />

            <Button
                android:id="@+id/division_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/division" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
